vs launch.json index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>藍晒-------嘉北科展</title>
 </head>
 <body>
-    
+    <div>
+        <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="pencils">
+        <h1>鉛筆--炭精筆</h1>
+            <a href="https://www.artfans.com.tw/products/faber-castell-pitt-pastel" target="_blank">德國FABER PITT粉彩炭精筆</a><br><br>
+            三菱測試鉛筆uni(6B、5B、4B、3B、2B、B、HB、F、H、2H、3H、4H、5H、6H、7H、8H、9H,共17支)100％made in japan.適用於測試產品硬度,手機,汽車,塑膠,化工,電鍍,玻璃,電鍍廠都會用到,鉛筆式硬度計利用標準鉛筆之硬度,對於所測試產品表面進行刮傷測試。依據標準鉛筆硬度標示,來判別產品表面之硬度。<br>
+            詳細介紹:通過犁破漆膜的鉛筆硬度等級測定漆膜硬度<br>
+
+            試驗技術特徵：硬度以在規定試驗條件下通過犁破漆膜的鉛筆硬度等級表示據Wolff Wilborn規範，測量塗料表面硬度的抗刮性，可用於試驗分析或控制產品品質，無論是油漆、塗料、傢俱、汽車,單層或多層烤漆均適用，測試極為快速及簡便。<br>
+
+            鉛筆硬度等級6B,5B,4B,3B,2B,B,HB,F,H,2H,3H,4H,5H,6H,7H,8H,9H從軟到硬，根據wolff-Wilborn硬度規範，是由軟到硬的順序測試，第一支會留下刮痕的鉛筆，視為最終的“Wolff-wilborn鉛筆硬度”，三菱硬度測試鉛筆是業界鉛筆硬度測試首選的測試鉛筆。<br>
+            硬度範圍：6B-9H<br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            炭筆是一種炭精作為筆芯的繪畫筆，顏色濃黑，其主要特點是附著力差，容易掉粉，與紙的摩擦力比較大，橡皮不宜擦掉，但同時使用炭筆作的畫面比較鬆動，一般用於速寫和人物肖像訓練。而繪畫鉛筆根據筆芯的硬度，劃分成13個等級，以英文字母H、B相區別。 鉛筆中的H就是英文 Hart(硬)的意思,B就是 Black(黑)的意思, B前面的數字越大就表示越鉛筆越黑,比如 6B 比 4B 黑。鉛筆有HB,1B--8B，素描學習中，我們經常使用的是4B，6B，8B等，4B等較為淡色的鉛筆適用於素描的起草。而6B，8B的鉛筆可以作為明暗上色，以節省作畫時間。繪畫鉛筆適用於初學者。 建議是初學者不要在鉛筆的選擇上太花力氣，因為素描的變化不是靠鉛筆的軟、硬度區別的，而是靠手的輕重和線條的重疊達到目的的。<br>
+            另外關於炭筆，僅僅是我的個人經驗，羅嗦一下，最好準備軟硬兩種就好了，因為軟的炭筆結構比較松，適合初期打形體，不適合細部刻畫的。但硬炭筆就不同，它比較硬，適用於做細部。 提個小建議，小編覺得單用炭筆的效果並不好，最好再結合是用木碳條或者是炭精棒，像用柳條燒制而成的柳碳條，筆色與鉛筆相似，但是附著力極差，不過濃淡變化很豐富的，我一般用來表現人體。炭精棒和炭筆筆芯為同一材料有黑、棕兩色，但沒有木桿，可以用來側面進行大面積塗抹，表現對象比較迅速。<br>
+            <br>
+    </div>
 </body>
 </html>
