--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a>
+        <a href="http://chemed.chemistry.org.tw/?p=2830">人像藍印術</a>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="pencils">
