--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>藍晒-------嘉北科展</title>
 </head>
 <body>
+    <h1><a href="./AFC">檸檬酸鐵銨</a></h1>
     <div>
-        <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a>
+        <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a><br>
         <a href="http://chemed.chemistry.org.tw/?p=2830">人像藍印術</a>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
