--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1><a href="./AFC">檸檬酸鐵銨</a></h1>
     <br><br>
     <div class="pencils">
-        <h1><a href="/pencils">鉛筆--炭精筆</a></h1>
+        <h1><a href="./pencils">鉛筆--炭精筆</a></h1>
     </div>
     <div>
         <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a><br>
