--- a/AFC/index.html
+++ b/AFC/index.html
@@ -16,4 +16,4 @@
 
  
 防老劑生產廠家的小編今天就給您介紹到這裡了，有疑問的可以電話諮詢小編我！<br>
-文章來源： <a href="https://read01.com/zh-tw/GmzPNo4.html#.Yid1aHpBzb0">https://read01.com/zh-tw/GmzPNo4.html#.Yid1aHpBzb0</a>
+文章來源： <a href="https://read01.com/zh-tw/GmzPNo4.html#.Yid1aHpBzb0" target="_blank">https://read01.com/zh-tw/GmzPNo4.html#.Yid1aHpBzb0</a>
