--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <a href="https://www.facebook.com/cyanotype2017/posts/719991041519723" target="_blank">藍曬的製作過程</a><br>
-        <a href="http://chemed.chemistry.org.tw/?p=2830">人像藍印術</a>
+        <a href="http://chemed.chemistry.org.tw/?p=2830" target="_blank">人像藍印術</a>
     </div>
 </body>
 </html>
