--- a/h2o2/index.html
+++ b/h2o2/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <img src="https://1.bp.blogspot.com/-A6SFvocUXf0/XVmLSsaPaRI/AAAAAAAAARs/7k_i6b8U7n4fcvAQxSFAd0RfFEJUc3yDACLcBGAs/s1600/%25E8%2597%258D%25E6%2599%2592%25E9%259B%2599%25E6%25B0%25A7%25E6%25B0%25B4%25E6%2599%2582%25E9%2596%2593.jpg" alt="">
+    30 秒效果最佳
 </body>
 </html>
