--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title>藍晒-------嘉北科展</title>
 </head>
 <body>
-    <a href="url">之前的東西</a>
+    <a href="url">之前的東西</a><br>
+    比例最佳 5:11 大約1:2
+    <br>
+    配好藥劑後先靜置一天，將<a href="paper" target="_blank">牛奶瓶紙</a>塗上藥劑，並陰乾(暗室內)
+    <br>
+    清洗時在比紙張大的容器裝水後，把紙浸泡在裡面輕輕搖晃，視情況換1-2次清水，直到畫面不再滲出綠色或藍色的液體為止 (只剩下白色跟藍色)。
+    <br>
+    藍晒作品:黃黃的東西是未清洗掉的檸檬酸鐵銨藥劑
+    <br>
+
 </body>
 </html>
